First Session Conducted On 14-11-2024 11-12:30

--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -1,2 +1,9 @@
 <h1>My top 5 Favourite Websites</h1>
 <!-- Write your code below -->
+<ol>
+<li><a href="https://www.google.com/">Google Website</a></li>
+<li><a href="https://www.facebook.com/">facebook Website</a></li>
+<li><a href="https://www.linkedin.com/in/rahul-kumar-dixit-83b40ab1/"> Rahul Profile</a></li>
+<li><a href="https://www.google.com/">Goggle Website</a></li>
+<li><a href="https://www.google.com/">Goggle Website</a></li>
+</ol>
